--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.3/html5shiv.js"></script>
             <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
-        <script src="mein.js"></script>
+        <script src="main.js"></script>
     </head>
     <body>
         <h1 class="text-center">Hello World</h1>
