--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <script src="main.js"></script>
     </head>
     <body>
-        <h1 class="text-center">Hello World</h1>
+        <h1 class="text-center">Hola Mundo</h1>
 
         <!-- jQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
